Add aif360 and fairlearn dependencies; enhance general research notebook with metric implementations

--- a/BiasAndFairnessModule/notebooks/general_research.ipynb
+++ b/BiasAndFairnessModule/notebooks/general_research.ipynb
@@ -503,17 +503,349 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed8b0b00",
+   "metadata": {},
+   "source": [
+    "## Metric Implementations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "0268fc8d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from fairlearn.metrics import MetricFrame\n",
+    "from sklearn.metrics import precision_score, brier_score_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c29e4ee1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_true = np.array([1, 0, 1, 1, 0, 1, 0, 0, 1, 1])\n",
+    "y_pred = np.array([1, 0, 1, 1, 1, 1, 1, 0, 1, 0])\n",
+    "y_prob = np.clip(np.random.beta(2, 2, size=10), 0.01, 0.99)\n",
+    "sensitive_feature = pd.Series([\"A\", \"A\", \"A\", \"A\", \"A\", \"B\", \"B\", \"B\", \"B\", \"B\"])  # e.g., group A and B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aea8e365",
+   "metadata": {},
+   "source": [
+    "* **Demographic parity**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6ca3912a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fairlearn.metrics import demographic_parity_difference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8e62292f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.20000000000000007\n"
+     ]
+    }
+   ],
+   "source": [
+    "dp = demographic_parity_difference(y_true, y_pred, sensitive_features=sensitive_feature)\n",
+    "print(dp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66b57e5e",
+   "metadata": {},
+   "source": [
+    "* **Equalized odds**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5a760420",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fairlearn.metrics import equalized_odds_difference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ae8aaca4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.33333333333333337\n"
+     ]
+    }
+   ],
+   "source": [
+    "eod = equalized_odds_difference(y_true, y_pred, sensitive_features=sensitive_feature, agg=\"worst_case\")\n",
+    "print(eod)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf4504fd",
+   "metadata": {},
+   "source": [
+    "* **Predictive Parity**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f2b19c29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ppv(y_true, y_pred):\n",
+    "    return precision_score(y_true, y_pred, zero_division=0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "db8fcc31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metric_frame = MetricFrame(\n",
+    "    metrics=ppv,\n",
+    "    y_true=y_true,\n",
+    "    y_pred=y_pred,\n",
+    "    sensitive_features=sensitive_feature\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "955a4d3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sensitive_feature_0\n",
+       "A    0.750000\n",
+       "B    0.666667\n",
+       "Name: ppv, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metric_frame.by_group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7433c7b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.08333333333333337)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metric_frame.difference()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbdce60a",
+   "metadata": {},
+   "source": [
+    "* **Conditional Statistical Parity**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f7625647",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = np.array([1, 0, 1, 1, 0, 1, 0, 1, 1, 0])\n",
+    "sensitive_feature = pd.Series([\"M\", \"M\", \"M\", \"M\", \"M\", \"F\", \"F\", \"F\", \"F\", \"F\"])\n",
+    "stratify_feature = pd.Series([\"high\", \"low\", \"high\", \"low\", \"high\", \"low\", \"low\", \"high\", \"low\", \"high\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "f562ea05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "    \"y_pred\": y_pred,\n",
+    "    \"sensitive\": sensitive_feature,\n",
+    "    \"stratify\": stratify_feature\n",
+    "})\n",
+    "\n",
+    "def conditional_statistical_parity(df, pred_col, sensitive_col, stratify_col):\n",
+    "    results = []\n",
+    "    for stratum in df[stratify_col].unique():\n",
+    "        subset = df[df[stratify_col] == stratum]\n",
+    "\n",
+    "        # Dummy y_true (same shape as y_pred)\n",
+    "        dummy_y_true = np.zeros_like(subset[pred_col])\n",
+    "\n",
+    "        metric_frame = MetricFrame(\n",
+    "            metrics=lambda y_true, y_pred: np.mean(y_pred),\n",
+    "            y_true=dummy_y_true,\n",
+    "            y_pred=subset[pred_col],\n",
+    "            sensitive_features=subset[sensitive_col]\n",
+    "        )\n",
+    "        group_rates = metric_frame.by_group\n",
+    "        disparity = group_rates.max() - group_rates.min()\n",
+    "        results.append((stratum, group_rates.to_dict(), disparity))\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "e8f27732",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Stratum: high\n",
+      "Group-wise selection rates: {'F': 0.5, 'M': 0.6666666666666666}\n",
+      "Disparity (max - min): 0.16666666666666663\n",
+      "\n",
+      "Stratum: low\n",
+      "Group-wise selection rates: {'F': 0.6666666666666666, 'M': 0.5}\n",
+      "Disparity (max - min): 0.16666666666666663\n"
+     ]
+    }
+   ],
+   "source": [
+    "csp_results = conditional_statistical_parity(df, \"y_pred\", \"sensitive\", \"stratify\")\n",
+    "for stratum, rates, disparity in csp_results:\n",
+    "    print(f\"\\nStratum: {stratum}\")\n",
+    "    print(\"Group-wise selection rates:\", rates)\n",
+    "    print(\"Disparity (max - min):\", disparity)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcc18298",
+   "metadata": {},
+   "source": [
+    "* **Calibration**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "1bb39eb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calibration_metric(y_true, y_prob):\n",
+    "    return brier_score_loss(y_true, y_prob)\n",
+    "\n",
+    "calibration = MetricFrame(\n",
+    "    metrics=calibration_metric,\n",
+    "    y_true=y_true,\n",
+    "    y_pred=y_prob,\n",
+    "    sensitive_features=sensitive_feature,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "c4dafb5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sensitive_feature_0\n",
+       "A    0.551197\n",
+       "B    0.314105\n",
+       "Name: calibration_metric, dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calibration.by_group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f243b2f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.4326509105374468)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calibration.overall"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c29e4ee1",
+   "id": "8d84557c",
    "metadata": {},
    "outputs": [],
    "source": []
